Changing main display to flex and fixing alignment

--- a/chess-board-editor/style.css
+++ b/chess-board-editor/style.css
@@ -22,15 +22,15 @@ main {
   padding: 1em 0;
   width: 100%;
   height: 100vh;
-  display: grid;
-  place-items: center;
-  gap: 0.5em;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 /* board */
 .board {
+  margin: 1em 0;
   width: 450px;
   height: 450px;
   display: grid;
@@ -161,3 +161,4 @@ main {
   background-repeat: no-repeat;
   background-position: 8px 8px;
 }
+
